--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,13 @@ server_port: 4000
 baseurl:    /
 url: http://localhost:4000
 
-source:      .
+source: qicfan.github.com
 destination: ./_site
 plugins:     ./_plugins
 
 future:      true
 lsi:         false
-pygments:    false
+pygments:    true
 markdown:    maruku
 permalink:   date
 
