--- a/_config.yml
+++ b/_config.yml
@@ -1,44 +1,13 @@
-safe:        false
-auto:        false
-server:      false
-server_port: 4000
-baseurl:    /
-url: http://localhost:4000
+markdown: rdiscount
+pygments: true
+plugins: ./_plugins
+safe: false
 
-source: qicfan.github.com
-destination: ./_site
-plugins:     ./_plugins
-
-future:      true
-lsi:         false
-pygments:    true
-markdown:    maruku
-permalink:   date
-
-maruku:
-  use_tex:    false
-  use_divs:   false
-  png_engine: blahtex
-  png_dir:    images/latex
-  png_url:    /images/latex
-
-rdiscount:
-  extensions: []
-
-redcarpet:
-  extensions: []
-
-kramdown:
-  auto_ids: true,
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  use_coderay: false
-  
-  coderay:
-    coderay_wrap: div
-    coderay_line_numbers: inline
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: style
+title: zeroq的小作坊
+url: http://zeroq.me
+feed: /atom.xml
+author:
+    name: zeroq
+    email: qicfan@gmail.com
+    twitter: twitter.com/qicfan
+description: zeroq的小作坊
