--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : zeroq的小作坊
+tagline: zeroq
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : zeroq
+  email : qicfan@email.test
+  github : qicfan
+  twitter : qicfan
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -26,7 +25,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://qicfan.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
