--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : zeroq的小作坊
 tagline: zeroq
 author :
   name : zeroq
-  email : qicfan@email.test
+  email : qicfan@github.com
   github : qicfan
   twitter : qicfan
 
