--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author :
   name : dean.q
   email : qicfan@gmail.com
   github : qicfan
-  twitter : qicfan
+  twitter : zeromz
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
