--- a/_config.yml
+++ b/_config.yml
@@ -126,4 +126,4 @@ JB :
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
 
-theme: jekyll-theme-minimal
+theme: the-minimum
