--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,16 @@ description: >- # this means to ignore newlines until "baseurl:"
   php,python,golang,typescript...
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: qicfan
+github_username:  qicfan
 
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
