--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  qicfan
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
